# meteorpp

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/Modules/: FindEjdb.cmake
examples/: ddp_monitor.cpp
include/meteorpp/: collection.hpp  ddp.hpp  ddp_collection.hpp  live_query.hpp
src/: collection.cpp  ddp.cpp  ddp_collection.cpp  live_query.cpp
tests/: ddp.cpp  minimongo.cpp  unittest.cpp
